--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "matija-utils": "^1.0.29",
     "pinia": "^2.3.0",
     "sass-embedded": "^1.83.0",
+    "three": "^0.171.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
