--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "matija-utils": "^1.0.29",
     "pinia": "^2.3.0",
     "sass-embedded": "^1.83.0",
